--- a/API/package.json
+++ b/API/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "api",
+  "name": "API",
   "version": "1.0.0",
-  "description": "<!-- title: 'AWS Simple HTTP Endpoint example in NodeJS' description: 'This template demonstrates how to make a simple HTTP API with Node.js running on AWS Lambda and API Gateway using the Serverless Framework.' layout: Doc framework: v3 platform: AWS language: nodeJS authorLink: 'https://github.com/serverless' authorName: 'Serverless, inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
-  "main": "handler.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "aws-serverless-express": "^3.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^6.7.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "mongoose": "^6.7.0",
+    "serverless-http": "^2.7.0"
   }
 }
