--- a/API/package.json
+++ b/API/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "serverless-http": "^2.7.0"
   }
